# klipper-mainpage-iesc

./: .gitattributes  .gitignore  ATTRIBUTIONS.md  LICENSE  Makefile  README.md
.claude/: mainsail-round2-plan.md  mainsail-status-plan.md  ralph-progress.md
backend/: Cargo.toml  config.toml
backend/content/: rules.md  rules_en.md  troubleshooting.md  troubleshooting_en.md
backend/src/: audit.rs  config.rs  geo.rs  mail.rs  main.rs  moonraker.rs  passwords.rs  pending_uploads.rs  pow.rs  security.rs  users.rs
backend/src/handlers/: admin.rs  auth.rs  branding.rs  content.rs  files.rs  machine.rs  mod.rs  motion.rs  octoprint_compat.rs  pending_uploads.rs  power.rs  print_control.rs  users.rs
frontend/: index.html  package-lock.json  package.json  standalone.html  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  gcodeviewer.d.ts  index.scss  main.tsx  printerTypes.ts  translations.ts  usePrinterState.ts
frontend/src/components/: BrandIcons.tsx  GcodeThumbnail.tsx  IconPicker.tsx  Select.tsx  Toast.tsx  UploadIconButton.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/hooks/: useAdminConfig.ts  useContentHeadings.test.ts  useContentHeadings.ts  usePendingUploads.ts  usePermissions.test.ts  usePermissions.ts  useReprintConfirm.tsx  useStoredBool.test.ts  useStoredBool.ts
frontend/src/lib/: cities.test.ts  cities.ts  contentHeadings.test.ts  contentHeadings.ts  countries.test.ts  countries.ts  dashboardFormat.test.ts  dashboardFormat.ts  errorTranslations.test.ts  errorTranslations.ts  fontDetect.test.ts  fontDetect.ts  footerIcons.test.ts  footerIcons.ts  formCoercion.ts  gcodeThumbnails.test.ts  gcodeThumbnails.ts  historyStatus.test.ts  historyStatus.ts  routing.test.ts  routing.ts  themes.test.ts  themes.ts  toErrorMessage.ts  url.ts
frontend/src/pages/: AdminAudit.test.ts  AdminAudit.tsx  AdminSettings.test.tsx  AdminSettings.tsx  Dashboard.tsx  GcodeFilesPage.tsx  GcodeViewer.tsx  Heightmap.tsx  HistoryPage.test.tsx  HistoryPage.tsx  MachinePage.tsx  Rules.tsx  Troubleshooting.tsx  WebcamPanel.tsx
(+296 files in other folders)
