[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
time = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4"] }
axum-extra = { version = "0.9", features = ["cookie"] }
pulldown-cmark = "0.11"
utoipa = "5.5.0"
utoipa-swagger-ui = { version = "8", features = ["axum"] }
